mongo-express-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-server-external
spec:
  type: LoadBalancer
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
