mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-server-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/dashboard"
          backend:
            service:
              name: nginx-server-service
              port:
                number: 80
